Заготовка под локализацию яку

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -1,3 +1,77 @@
 {
-    
+    "fu_base": "base",
+    "fu_open_pon": "open pon",
+    "fu_closed_pon": "closed pon",
+    "fu_open_terminal_pon": "open terminal pon",
+    "fu_closed_terminal_pon": "closed terminal pon",
+    "fu_open_kan": "open kan",
+    "fu_closed_kan": "closed kan",
+    "fu_open_terminal_kan": "open terminal kan",
+    "fu_closed_terminal_kan": "closed terminal kan",
+    "fu_valued_pair": "valued pair",
+    "fu_double_valued_pair": "double valued pair",
+    "fu_kanchan": "kanchan",
+    "fu_penchan": "penchan",
+    "fu_pair_wait": "pair wait",
+    "fu_tsumo": "tsumo",
+    "fu_hand_without_fu": "hand without fu",
+    "Fu": "Fu",
+    "fu": "fu",
+    "Han": "Han",
+    "han": "han",
+    "Yaku": "Yaku",
+    "no": "no",
+    "yes": "yes",
+    "wind_of_round": "Wind of Round",
+    "wind_of_seat": "Wind of Seat",
+    "dora_indicator": "Dora Indicator",
+    "uradora_indicator": "Uradora Indicator",
+    "winning_parameters": "Winning Parameters",
+    "riichi_option": "Riichi",
+    "tsumo_option": "Tsumo",
+    "next_hand": "Next Hand",
+    "yaku_tsumo": "Tsumo",
+    "yaku_riichi": "Riichi",
+    "yaku_ippatsu": "Ippatsu",
+    "yaku_chankan": "Chankan",
+    "yaku_rinshan": "Rinshan",
+    "yaku_haitei": "Haitei",
+    "yaku_houtei": "Houtei",
+    "yaku_pinfu": "Pinfu",
+    "yaku_tanyao": "Tanyao",
+    "yaku_ippeiko": "Ippeiko",
+    "yaku_yakuhai": "Yakuhai",
+    "yaku_daburu_riichi": "Daburu Riichi",
+    "yaku_chiitoi": "Chiitoi",
+    "yaku_chanta": "Chanta",
+    "yaku_itsuu": "Itsuu",
+    "yaku_sanshoku_doujun": "Sanshoku Doujun",
+    "yaku_sanshoku_doukou": "Sanshoku Doukou",
+    "yaku_sankantsu": "Sankantsu",
+    "yaku_toitoi": "Toitoi",
+    "yaku_sanankou": "Sanankou",
+    "yaku_shousangen": "Shousangen",
+    "yaku_honrouto": "Honrouto",
+    "yaku_ryanpeikou": "Ryanpeikou",
+    "yaku_junchan": "Junchan",
+    "yaku_honitsu": "Honitsu",
+    "yaku_chinitsu": "Chinitsu",
+    "yaku_renhou": "Renhou",
+    "yaku_tenhou": "Tenhou",
+    "yaku_chihou": "Chihou",
+    "yaku_daisangen": "Daisangen",
+    "yaku_suuankou": "Suuankou",
+    "yaku_tsuiisou": "Tsuiisou",
+    "yaku_ryuuiisou": "Ryuuiisou",
+    "yaku_chinrouto": "Chinrouto",
+    "yaku_chuuren_poutou": "Chuuren poutou",
+    "yaku_chuuren_poutou_nine_tile_wait": "Chuuren poutou (Nine tile wait)",
+    "yaku_kokushi_musou": "Kokushi musou",
+    "yaku_kokushi_musou_13_tile_wait": "Kokushi musou (13 tile wait)",
+    "yaku_daisuushi": "Daisuushi",
+    "yaku_shousuushi": "Shousuushi",
+    "yaku_suukantsu": "Suukantsu",
+    "yaku_dora": "Dora",
+    "yaku_uradora": "Uradora",
+    "yaku_akadora": "Akadora"
 }
