--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -2,19 +2,19 @@
     "fu_base": "базовые",
     "fu_open_pon": "открытй пон средних",
     "fu_closed_pon": "закрытый пон средних",
-    "fu_open_terminal_pon": "открытый пон терминльных или благородных",
+    "fu_open_terminal_pon": "открытый пон терминальных или благородных",
     "fu_closed_terminal_pon": "закрытый пон терминальных или благородных",
     "fu_open_kan": "открытый кан средних",
     "fu_closed_kan": "закрытый кан средних",
     "fu_open_terminal_kan": "открытый кан терминальных или благородных",
     "fu_closed_terminal_kan": "закрытый кан терминальных или благородных",
     "fu_valued_pair": "ценная пара",
+    "fu_double_valued_pair": "дважды ценная пара",
     "fu_kanchan": "ожидание в середину (канчан)",
     "fu_penchan": "ожидание в край (пенчан)",
     "fu_pair_wait": "ожидание в пару",
     "fu_tsumo": "цумо",
     "fu_hand_without_fu": "рука без фу",
-    "fu_double_valued_pair": "дважды ценная пара",
     "Fu": "Фу",
     "fu": "фу",
     "Han": "Хан",
@@ -26,8 +26,52 @@
     "wind_of_seat": "Ветер места",
     "dora_indicator": "Индикатор доры",
     "uradora_indicator": "Индикатор урадоры",
-    "wining_parameters": "Параметры выигрыша",
+    "winning_parameters": "Параметры выигрыша",
     "riichi_option": "Риичи",
     "tsumo_option": "Цумо",
-    "next_hand": "Следующая рука"
+    "next_hand": "Следующая рука",
+    "yaku_tsumo": "Tsumo",
+    "yaku_riichi": "Riichi",
+    "yaku_ippatsu": "Ippatsu",
+    "yaku_chankan": "Chankan",
+    "yaku_rinshan": "Rinshan",
+    "yaku_haitei": "Haitei",
+    "yaku_houtei": "Houtei",
+    "yaku_pinfu": "Pinfu",
+    "yaku_tanyao": "Tanyao",
+    "yaku_ippeiko": "Ippeiko",
+    "yaku_yakuhai": "Yakuhai",
+    "yaku_daburu_riichi": "Daburu Riichi",
+    "yaku_chiitoi": "Chiitoi",
+    "yaku_chanta": "Chanta",
+    "yaku_itsuu": "Itsuu",
+    "yaku_sanshoku_doujun": "Sanshoku Doujun",
+    "yaku_sanshoku_doukou": "Sanshoku Doukou",
+    "yaku_sankantsu": "Sankantsu",
+    "yaku_toitoi": "Toitoi",
+    "yaku_sanankou": "Sanankou",
+    "yaku_shousangen": "Shousangen",
+    "yaku_honrouto": "Honrouto",
+    "yaku_ryanpeikou": "Ryanpeikou",
+    "yaku_junchan": "Junchan",
+    "yaku_honitsu": "Honitsu",
+    "yaku_chinitsu": "Chinitsu",
+    "yaku_renhou": "Renhou",
+    "yaku_tenhou": "Tenhou",
+    "yaku_chihou": "Chihou",
+    "yaku_daisangen": "Daisangen",
+    "yaku_suuankou": "Suuankou",
+    "yaku_tsuiisou": "Tsuiisou",
+    "yaku_ryuuiisou": "Ryuuiisou",
+    "yaku_chinrouto": "Chinrouto",
+    "yaku_chuuren_poutou": "Chuuren poutou",
+    "yaku_chuuren_poutou_nine_tile_wait": "Chuuren poutou (Nine tile wait)",
+    "yaku_kokushi_musou": "Kokushi musou",
+    "yaku_kokushi_musou_13_tile_wait": "Kokushi musou (13 tile wait)",
+    "yaku_daisuushi": "Daisuushi",
+    "yaku_shousuushi": "Shousuushi",
+    "yaku_suukantsu": "Suukantsu",
+    "yaku_dora": "Dora",
+    "yaku_uradora": "Uradora",
+    "yaku_akadora": "Akadora"
 }
