Русская локализация яку

--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -30,48 +30,48 @@
     "riichi_option": "Риичи",
     "tsumo_option": "Цумо",
     "next_hand": "Следующая рука",
-    "yaku_tsumo": "Tsumo",
-    "yaku_riichi": "Riichi",
-    "yaku_ippatsu": "Ippatsu",
-    "yaku_chankan": "Chankan",
-    "yaku_rinshan": "Rinshan",
-    "yaku_haitei": "Haitei",
-    "yaku_houtei": "Houtei",
-    "yaku_pinfu": "Pinfu",
-    "yaku_tanyao": "Tanyao",
-    "yaku_ippeiko": "Ippeiko",
-    "yaku_yakuhai": "Yakuhai",
-    "yaku_daburu_riichi": "Daburu Riichi",
-    "yaku_chiitoi": "Chiitoi",
-    "yaku_chanta": "Chanta",
-    "yaku_itsuu": "Itsuu",
-    "yaku_sanshoku_doujun": "Sanshoku Doujun",
-    "yaku_sanshoku_doukou": "Sanshoku Doukou",
-    "yaku_sankantsu": "Sankantsu",
-    "yaku_toitoi": "Toitoi",
-    "yaku_sanankou": "Sanankou",
-    "yaku_shousangen": "Shousangen",
-    "yaku_honrouto": "Honrouto",
-    "yaku_ryanpeikou": "Ryanpeikou",
-    "yaku_junchan": "Junchan",
-    "yaku_honitsu": "Honitsu",
-    "yaku_chinitsu": "Chinitsu",
-    "yaku_renhou": "Renhou",
-    "yaku_tenhou": "Tenhou",
-    "yaku_chihou": "Chihou",
-    "yaku_daisangen": "Daisangen",
-    "yaku_suuankou": "Suuankou",
-    "yaku_tsuiisou": "Tsuiisou",
-    "yaku_ryuuiisou": "Ryuuiisou",
-    "yaku_chinrouto": "Chinrouto",
-    "yaku_chuuren_poutou": "Chuuren poutou",
-    "yaku_chuuren_poutou_nine_tile_wait": "Chuuren poutou (Nine tile wait)",
-    "yaku_kokushi_musou": "Kokushi musou",
-    "yaku_kokushi_musou_13_tile_wait": "Kokushi musou (13 tile wait)",
-    "yaku_daisuushi": "Daisuushi",
-    "yaku_shousuushi": "Shousuushi",
-    "yaku_suukantsu": "Suukantsu",
-    "yaku_dora": "Dora",
-    "yaku_uradora": "Uradora",
-    "yaku_akadora": "Akadora"
+    "yaku_tsumo": "Цумо",
+    "yaku_riichi": "Риичи",
+    "yaku_ippatsu": "Иппацу",
+    "yaku_chankan": "Чанкан",
+    "yaku_rinshan": "Риншан",
+    "yaku_haitei": "Хайтей",
+    "yaku_houtei": "Хотей",
+    "yaku_pinfu": "Пинфу",
+    "yaku_tanyao": "Таняо",
+    "yaku_ippeiko": "Иппейко",
+    "yaku_yakuhai": "Якухай",
+    "yaku_daburu_riichi": "Дабл-риичи",
+    "yaku_chiitoi": "Чиитойцу",
+    "yaku_chanta": "Чанта",
+    "yaku_itsuu": "Иццу",
+    "yaku_sanshoku_doujun": "Саншоку додзюн",
+    "yaku_sanshoku_doukou": "Саншоку доко",
+    "yaku_sankantsu": "Санканцу",
+    "yaku_toitoi": "Тойтой",
+    "yaku_sanankou": "Сананко",
+    "yaku_shousangen": "Шосанген",
+    "yaku_honrouto": "Хонрото",
+    "yaku_ryanpeikou": "Рянпейко",
+    "yaku_junchan": "Джунчан",
+    "yaku_honitsu": "Хоницу",
+    "yaku_chinitsu": "Чиницу",
+    "yaku_renhou": "Ренхо",
+    "yaku_tenhou": "Тенхо",
+    "yaku_chihou": "Чихо",
+    "yaku_daisangen": "Дайсанген",
+    "yaku_suuankou": "Сууанко",
+    "yaku_tsuiisou": "Цуисо",
+    "yaku_ryuuiisou": "Рюисо",
+    "yaku_chinrouto": "Чинрото",
+    "yaku_chuuren_poutou": "Чууренпото",
+    "yaku_chuuren_poutou_nine_tile_wait": "Чууренпото (девятистороннее ожидание)",
+    "yaku_kokushi_musou": "Тринадцать сирот",
+    "yaku_kokushi_musou_13_tile_wait": "Тринадцать сирот (тринадацтисторнее ожидание)",
+    "yaku_daisuushi": "Дайсуши",
+    "yaku_shousuushi": "Шосуши",
+    "yaku_suukantsu": "Сууканцу",
+    "yaku_dora": "Дора",
+    "yaku_uradora": "Урадора",
+    "yaku_akadora": "Акадора"
 }
