Уточнено название ожидания в пару на русском языке

--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -12,7 +12,7 @@
     "fu_double_valued_pair": "дважды ценная пара",
     "fu_kanchan": "ожидание в середину (канчан)",
     "fu_penchan": "ожидание в край (пенчан)",
-    "fu_pair_wait": "ожидание в пару",
+    "fu_pair_wait": "ожидание в пару (танки)",
     "fu_tsumo": "цумо",
     "fu_hand_without_fu": "рука без фу",
     "Fu": "Фу",
