Начальная обработка ответа. Проверка хан и фу

--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -30,6 +30,8 @@
     "riichi_option": "Риичи",
     "tsumo_option": "Цумо",
     "next_hand": "Следующая рука",
+    "check_answer": "Проверить ответ",
+    "show_tip": "Подсказка",
     "yaku_tsumo": "Цумо",
     "yaku_riichi": "Риичи",
     "yaku_ippatsu": "Иппацу",
