--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -20,6 +20,7 @@
     "Han": "Хан",
     "han": "хан",
     "Yaku": "Яку",
+    "Points": "Выплата",
     "no": "нет",
     "yes": "да",
     "wind_of_round": "Ветер раунда",
