Улучшения для мобильной версии

--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -30,8 +30,8 @@
     "winning_parameters": "Параметры выигрыша",
     "riichi_option": "Риичи",
     "tsumo_option": "Цумо",
-    "next_hand": "Следующая рука",
-    "check_answer": "Проверить ответ",
+    "next_hand": "Дальше",
+    "check_answer": "Проверить",
     "show_tip": "Подсказка",
     "yaku_tsumo": "Цумо",
     "yaku_riichi": "Риичи",
