Добавлено название лимитированной руки в подсказке

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -73,5 +73,11 @@
     "yaku_suukantsu": "Suukantsu",
     "yaku_dora": "Dora",
     "yaku_uradora": "Uradora",
-    "yaku_akadora": "Akadora"
+    "yaku_akadora": "Akadora",
+    "limit_mangan": "Mangan",
+    "limit_haneman": "Haneman",
+    "limit_baiman": "Baiman", 
+    "limit_sanbaiman": "Sanbaiman",
+    "limit_yakuman": "Yakuman"
+
 }
