--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -76,5 +76,10 @@
     "yaku_suukantsu": "Сууканцу",
     "yaku_dora": "Дора",
     "yaku_uradora": "Урадора",
-    "yaku_akadora": "Акадора"
+    "yaku_akadora": "Акадора",
+    "limit_mangan": "Манган",
+    "limit_haneman": "Ханеман",
+    "limit_baiman": "Байман", 
+    "limit_sanbaiman": "Санбайман",
+    "limit_yakuman": "Якуман"
 }
