--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -85,5 +85,6 @@
     "tooltip_points": "В случае недилерского цумо указывается в формате выплата дилера/недилера. Например, 4000/2000",
     "settings": "Настройки",
     "settings_autoyaku": "Автоматически показывать расшифровку яку и фу",
-    "settings_check_only_han_and_fu": "Проверять только хан и фу"
+    "settings_check_only_han_and_fu": "Проверять только хан и фу",
+    "settings_carelessly": "Небрежная ориентцаия костей"
 }
