Исправлены опечатки и стили css

--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -84,7 +84,7 @@
     "limit_yakuman": "Якуман",
     "tooltip_points": "В случае недилерского цумо указывается в формате выплата дилера/недилера. Например, 4000/2000",
     "settings": "Настройки",
-    "settings_autoyaku": "Автоматически показывать расшифровку яку и фу",
+    "settings_autoyaku": "Автоматически показывать расшифровку хан и фу",
     "settings_check_only_han_and_fu": "Проверять только хан и фу",
-    "settings_carelessly": "Небрежная ориентцаия костей"
+    "settings_carelessly": "Небрежная ориентация костей"
 }
