Опция показа выплаты в расшифровке зхан и фу

--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -86,5 +86,6 @@
     "settings": "Настройки",
     "settings_autoyaku": "Автоматически показывать расшифровку хан и фу",
     "settings_check_only_han_and_fu": "Проверять только хан и фу",
-    "settings_carelessly": "Небрежная ориентация костей"
+    "settings_carelessly": "Небрежная ориентация костей",
+    "settings_show_points": "Показывать в расшифровке выплату"
 }
