--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -87,5 +87,6 @@
     "settings_check_only_han_and_fu": "Check only han and fu",
     "settings_carelessly": "Carelessly tail orientaion",
     "settings_show_points": "Show points in detail",
-    "page_about": "About"
+    "page_about": "About",
+    "site_title": "Riichi Scoring Trainer"
 }
