--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -88,5 +88,6 @@
     "settings_check_only_han_and_fu": "Проверять только хан и фу",
     "settings_carelessly": "Небрежная ориентация костей",
     "settings_show_points": "Показывать в расшифровке выплату",
-    "page_about": "О сайте"
+    "page_about": "О сайте",
+    "site_title": "Подсчёт руки в риичи"
 }
